@@ -1,4 +1,4 @@
 #Automatically generated by ReleaseManagement
-#Thu Sep 22 12:37:34 PDT 2011
-version=4.9.3
-sha1=d20accfa3513a60307424c594fd941d70c772155
+#Mon Oct 17 16:27:47 PDT 2011
+version=4.9.4
+sha1=4c4b40c7173e8ac45847f976ce5501fe85f9e7cb
