@@ -1,7 +1,7 @@
 #Automatically generated by ProjectDependencies
-#Fri Oct 14 16:38:48 PDT 2011
-util|util-eval=com.twitter/util-eval
+#Thu Oct 13 18:28:44 EDT 2011
 com.twitter/util-core=1.11.9
+util|util-eval=com.twitter/util-eval
 com.twitter/util-eval=1.11.9
 util|util-logging=com.twitter/util-logging
 com.twitter/util-logging=1.11.9
