@@ -1,0 +1,6 @@
+import com.twitter.util.Config
+
+new Config[String] {
+  override def apply() = "foo"
+}
+
